Right-align Amount column in Ledger for decimal alignment

--- a/web/static/css/ledger.css
+++ b/web/static/css/ledger.css
@@ -63,6 +63,10 @@
 }
 
 /* Amount colors */
+.amount-column {
+    text-align: right;
+}
+
 .income-amount {
     color: #0E5346;
     font-weight: 600;
