Remove client names from page titles for privacy

--- a/web/templates/ai_scribe.html
+++ b/web/templates/ai_scribe.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}AI Scribe - {{ client.first_name }} {{ client.last_name }}{% endblock %}
+{% block title %}AI Scribe - EdgeCase Equalizer{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/ai_scribe.css') }}">
