--- a/web/templates/entry_forms/item.html
+++ b/web/templates/entry_forms/item.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{% if entry %}Edit{% else %}Create{% endif %} Item - {{ client.first_name }} {{ client.last_name }}{% endblock %}
+{% block title %}{% if entry %}Edit{% else %}Create{% endif %} Item - EdgeCase Equalizer{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/item.css') }}">
