--- a/web/templates/entry_forms/session.html
+++ b/web/templates/entry_forms/session.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Session Entry - {{ client.first_name }} {{ client.last_name }} - EdgeCase Equalizer{% endblock %}
+{% block title %}Session Entry - EdgeCase Equalizer{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/session.css') }}">
