--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ client.first_name }} {{ client.last_name }} - EdgeCase Equalizer{% endblock %}
+{% block title %}Client File - EdgeCase Equalizer{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/client_file.css') }}">
