--- a/web/templates/export.html
+++ b/web/templates/export.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Export Client File - {{ client.first_name }} {{ client.last_name }} - EdgeCase Equalizer{% endblock %}
+{% block title %}Export Client File - EdgeCase Equalizer{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/export.css') }}">
