--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Schedule Appointment - {{ client.first_name }} {{ client.last_name }}{% endblock %}
+{% block title %}Schedule Appointment - EdgeCase Equalizer{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/schedule_form.css') }}">
