--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -75,6 +75,10 @@
                 <select id="backup-location">
                     <option value="default">Default (app folder)</option>
                 </select>
+                <div id="custom-location-wrapper" class="custom-location-wrapper hidden">
+                    <input type="text" id="custom-location-input" placeholder="Enter full path, e.g., /Volumes/Backup/EdgeCase">
+                    <button type="button" class="btn btn-small" id="save-custom-location-btn">Save</button>
+                </div>
                 <div id="location-path" class="location-path"></div>
             </div>
             <div class="form-group"></div>
