--- a/web/templates/entry_forms/absence.html
+++ b/web/templates/entry_forms/absence.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <div class="card absence-card">
-    <div class="absence-header">
+    <div class="entry-header">
         <div>
             <h2><i data-lucide="x-circle" class="page-icon"></i>Absence Entry</h2>
             <div class="text-muted">
