--- a/web/templates/entry_forms/item.html
+++ b/web/templates/entry_forms/item.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <div class="card item-card">
-    <div class="item-header">
+    <div class="entry-header">
         <div>
             <h2><i data-lucide="package" class="page-icon"></i>Item Entry</h2>
             <div class="text-muted">
