--- a/web/templates/entry_forms/communication.html
+++ b/web/templates/entry_forms/communication.html
@@ -184,7 +184,7 @@
     </form>
     
     <!-- Navigation buttons OUTSIDE the form -->
-    <div class="communication-form-actions">
+    <div class="entry-form-actions">
         <a href="{{ url_for('clients.client_file', client_id=client.id) }}" class="btn btn-secondary">Cancel</a>
         
         <div class="nav-buttons">
