--- a/web/templates/entry_forms/upload.html
+++ b/web/templates/entry_forms/upload.html
@@ -158,7 +158,7 @@
     </form>
     
     <!-- Navigation buttons OUTSIDE the form -->
-    <div class="upload-form-actions">
+    <div class="entry-form-actions">
         <a href="{{ url_for('clients.client_file', client_id=client.id) }}" class="btn btn-secondary">Cancel</a>
         
         {% if is_edit %}
