Add space between icon and text in Schedule form button

--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -165,8 +165,7 @@
     <div class="schedule-form-actions">
         <a href="{{ url_for('clients.client_file', client_id=client.id) }}" class="btn btn-secondary">Cancel</a>
         <button type="submit" form="schedule-form" class="btn">
-            <i data-lucide="calendar-plus"></i>
-            Add to Calendar
+            <i data-lucide="calendar-plus"></i> Add to Calendar
         </button>
     </div>
 </div>
